Add controllers: updateById & updateByLogin
